--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/poppins": "^5.1.0",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.4.11",
+    "@next/third-parties": "^16.1.6",
     "@reduxjs/toolkit": "^2.6.1",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-virtual": "^3.13.13",
